// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectedSamples /> > should render when [samples.length=1] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <Badge>
      1
    </Badge>
  </label>
  <Styled(BoxGroup)
    count={1}
  >
    <BoxGroupSection
      disabled={true}
      key="foo"
    >
      bar
    </BoxGroupSection>
  </Styled(BoxGroup)>
</Fragment>
`;

exports[`<SelectedSamples /> > should return when [samples.length=0] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <Badge>
      0
    </Badge>
  </label>
  <Styled(BoxGroup)
    count={0}
  />
</Fragment>
`;
